Fixed openapi sdk
