# openapi/src/models/all_job_status_response_dto.rs
@@ -1,0 +1,49 @@
+/*
+ * Immich
+ *
+ * Immich API
+ *
+ * The version of the OpenAPI document: 1.17.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct AllJobStatusResponseDto {
+    #[serde(rename = "thumbnailGenerationQueueCount")]
+    pub thumbnail_generation_queue_count: Box<crate::models::JobCounts>,
+    #[serde(rename = "metadataExtractionQueueCount")]
+    pub metadata_extraction_queue_count: Box<crate::models::JobCounts>,
+    #[serde(rename = "videoConversionQueueCount")]
+    pub video_conversion_queue_count: Box<crate::models::JobCounts>,
+    #[serde(rename = "machineLearningQueueCount")]
+    pub machine_learning_queue_count: Box<crate::models::JobCounts>,
+    #[serde(rename = "isThumbnailGenerationActive")]
+    pub is_thumbnail_generation_active: bool,
+    #[serde(rename = "isMetadataExtractionActive")]
+    pub is_metadata_extraction_active: bool,
+    #[serde(rename = "isVideoConversionActive")]
+    pub is_video_conversion_active: bool,
+    #[serde(rename = "isMachineLearningActive")]
+    pub is_machine_learning_active: bool,
+}
+
+impl AllJobStatusResponseDto {
+    pub fn new(thumbnail_generation_queue_count: crate::models::JobCounts, metadata_extraction_queue_count: crate::models::JobCounts, video_conversion_queue_count: crate::models::JobCounts, machine_learning_queue_count: crate::models::JobCounts, is_thumbnail_generation_active: bool, is_metadata_extraction_active: bool, is_video_conversion_active: bool, is_machine_learning_active: bool) -> AllJobStatusResponseDto {
+        AllJobStatusResponseDto {
+            thumbnail_generation_queue_count: Box::new(thumbnail_generation_queue_count),
+            metadata_extraction_queue_count: Box::new(metadata_extraction_queue_count),
+            video_conversion_queue_count: Box::new(video_conversion_queue_count),
+            machine_learning_queue_count: Box::new(machine_learning_queue_count),
+            is_thumbnail_generation_active,
+            is_metadata_extraction_active,
+            is_video_conversion_active,
+            is_machine_learning_active,
+        }
+    }
+}
+
+
