# openapi/src/models/job_command_dto.rs
@@ -1,0 +1,28 @@
+/*
+ * Immich
+ *
+ * Immich API
+ *
+ * The version of the OpenAPI document: 1.17.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct JobCommandDto {
+    #[serde(rename = "command")]
+    pub command: crate::models::JobCommand,
+}
+
+impl JobCommandDto {
+    pub fn new(command: crate::models::JobCommand) -> JobCommandDto {
+        JobCommandDto {
+            command,
+        }
+    }
+}
+
+
