# openapi/src/models/job_id.rs
@@ -1,0 +1,45 @@
+/*
+ * Immich
+ *
+ * Immich API
+ *
+ * The version of the OpenAPI document: 1.17.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+/// 
+#[derive(Clone, Copy, Debug, Eq, PartialEq, Ord, PartialOrd, Hash, Serialize, Deserialize)]
+pub enum JobId {
+    #[serde(rename = "thumbnail-generation")]
+    ThumbnailGeneration,
+    #[serde(rename = "metadata-extraction")]
+    MetadataExtraction,
+    #[serde(rename = "video-conversion")]
+    VideoConversion,
+    #[serde(rename = "machine-learning")]
+    MachineLearning,
+
+}
+
+impl ToString for JobId {
+    fn to_string(&self) -> String {
+        match self {
+            Self::ThumbnailGeneration => String::from("thumbnail-generation"),
+            Self::MetadataExtraction => String::from("metadata-extraction"),
+            Self::VideoConversion => String::from("video-conversion"),
+            Self::MachineLearning => String::from("machine-learning"),
+        }
+    }
+}
+
+impl Default for JobId {
+    fn default() -> JobId {
+        Self::ThumbnailGeneration
+    }
+}
+
+
+
+
