# openapi/src/models/job_status_response_dto.rs
@@ -1,0 +1,31 @@
+/*
+ * Immich
+ *
+ * Immich API
+ *
+ * The version of the OpenAPI document: 1.17.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+
+
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct JobStatusResponseDto {
+    #[serde(rename = "isActive")]
+    pub is_active: bool,
+    #[serde(rename = "queueCount")]
+    pub queue_count: serde_json::Value,
+}
+
+impl JobStatusResponseDto {
+    pub fn new(is_active: bool, queue_count: serde_json::Value) -> JobStatusResponseDto {
+        JobStatusResponseDto {
+            is_active,
+            queue_count,
+        }
+    }
+}
+
+
