# openapi/src/models/mod.rs
@@ -8,6 +8,8 @@ pub mod album_count_response_dto;
 pub use self::album_count_response_dto::AlbumCountResponseDto;
 pub mod album_response_dto;
 pub use self::album_response_dto::AlbumResponseDto;
+pub mod all_job_status_response_dto;
+pub use self::all_job_status_response_dto::AllJobStatusResponseDto;
 pub mod asset_count_by_time_bucket;
 pub use self::asset_count_by_time_bucket::AssetCountByTimeBucket;
 pub mod asset_count_by_time_bucket_response_dto;
@@ -52,6 +54,16 @@ pub mod get_asset_by_time_bucket_dto;
 pub use self::get_asset_by_time_bucket_dto::GetAssetByTimeBucketDto;
 pub mod get_asset_count_by_time_bucket_dto;
 pub use self::get_asset_count_by_time_bucket_dto::GetAssetCountByTimeBucketDto;
+pub mod job_command;
+pub use self::job_command::JobCommand;
+pub mod job_command_dto;
+pub use self::job_command_dto::JobCommandDto;
+pub mod job_counts;
+pub use self::job_counts::JobCounts;
+pub mod job_id;
+pub use self::job_id::JobId;
+pub mod job_status_response_dto;
+pub use self::job_status_response_dto::JobStatusResponseDto;
 pub mod login_credential_dto;
 pub use self::login_credential_dto::LoginCredentialDto;
 pub mod login_response_dto;
